--- a/package.json
+++ b/package.json
@@ -4,18 +4,21 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node --watch app.js",
+    "start:mysql": "node --watch ./server/server.mysql.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.1.1",
-    "cookie-parser": "^1.4.6",
+    "bcrypt": "5.1.1",
+    "cookie-parser": "1.4.6",
     "cors": "2.8.5",
     "express": "4.19.2",
-    "jsonwebtoken": "^9.0.2",
-    "pug": "^3.0.3",
+    "jsonwebtoken": "9.0.2",
+    "mysql2": "3.11.0",
+    "pug": "3.0.3",
     "zod": "3.23.8"
   }
 }
